[gd_scene load_steps=3 format=3 uid="uid://bgyk5h4ldngji"]

[ext_resource type="Theme" uid="uid://bl84kxmf30sss" path="res://resources/theme.tres" id="1_efx52"]
[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="2_3gi67"]

[node name="SettingsMenu" type="Control" node_paths=PackedStringArray("fullscreen_checkbox", "volume_slider")]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_efx52")
script = ExtResource("2_3gi67")
fullscreen_checkbox = NodePath("MarginContainer/MarginContainer/VBoxContainer/FullscreenCheckBox")
volume_slider = NodePath("MarginContainer/MarginContainer/VBoxContainer/VolumeSlider")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VolumeLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to menu"

[connection signal="toggled" from="MarginContainer/MarginContainer/VBoxContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
